made css class names more unique - prevent overlaping

--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,16 @@
 .expirationCategoriesFlexboxContainer,
-.itemsFlexboxContainer {
+.expirationItemsFlexboxContainer {
     display: flex;
     flex-direction: column;
     gap: 2vh;
 }
 
-.itemsFlexboxContainer {
+.expirationItemsFlexboxContainer {
     gap: 0;
 }
 
 .expirationCategoryContainer,
-.itemContainer {
+.expirationItemContainer {
     border: 3px solid #3D3D3C;
     border-radius: 10px;
     transition-duration: .5s;
@@ -19,7 +19,7 @@
 }
 
 .expirationCategoryContainer:hover,
-.itemContainer:hover {
+.expirationItemContainer:hover {
     scale: .95;
     transition-duration: .5s;
     box-shadow: rgb(0 0 0 / 20%) 0 8px 24px;
@@ -50,7 +50,7 @@
     margin-left: 10px;
 }
 
-.itemContainer {
+.expirationItemContainer {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -59,6 +59,6 @@
     margin-bottom: 10px;
 }
 
-.itemContainer:hover {
+.expirationItemContainer:hover {
     scale: .93;
 }
